package com.rafael.inclusimap.core.domain.model

enum class AccessibilityType {
    ACCESSIBLE,
    MEDIUM,
    INACCESSIBLE,
    UNKNOWN,
}
